syntax = "proto3";

package vl.core;

import "Device.proto";
import "ResponseCode.proto";
import "RequestCode.proto";


service RegisterService{


  /**
  注册设备
   */
  rpc registe(RegisterRequest) returns (RegisterResponse){};

  /**
  注销设备
   */
  rpc cancel(CancelRequest) returns (CancelResponse){};

}



message RegisterRequest{
  /**
  请求id
   */
  RequestCode status = 1;


  /**
    尝试申请设备信息，id传入则说明是注册过的设备，如果传入mac和ip则说明客户端希望分配到该信息，但是如果冲突则失败
   */
  Device device = 2;

}

message RegisterResponse{

  ResponseCode status = 1;

  /**
  申请到的设备信息，可能申请失败
   */
  Device device = 2;

}

message CancelRequest{

  /**
  请求id
   */
  RequestCode status = 1;
}

message CancelResponse{


  ResponseCode status = 1;

  Device device = 2;

}

