syntax = "proto3";

package  vl.core;

message ResponseCode{

  string requestId = 1;

  string clientId = 2;
  /**
  code = 0 表示成功
   */
  int32  code = 3;

  string message = 4;

}